--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,22 +31,22 @@
 
     <ImageView
         android:id="@+id/robotlanang"
-        android:layout_width="244dp"
-        android:layout_height="297dp"
+        android:layout_width="228dp"
+        android:layout_height="280dp"
         android:layout_marginStart="8dp"
         android:scaleType="centerCrop"
         android:src="@drawable/robotgede"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/et_username"
+        app:layout_constraintEnd_toStartOf="@id/et_namaakun"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.672" />
+        app:layout_constraintVertical_bias="0.596" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
         android:text="Masuk dulu ya adik maniez.."
         android:textColor="@android:color/white"
@@ -58,35 +58,51 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_username"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/et_email"
+        android:layout_width="470dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:hint="Masukkan Nama Akun"
-        android:padding="12dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/kotakisi"
+        android:hint="Masukkan Email"
         android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/robotlanang"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <!-- Password -->
+
     <EditText
-        android:id="@+id/et_password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/et_namaakun"
+        android:layout_width="470dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:hint="Masukkan Kata Sandi"
-        android:padding="12dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/kotakisi"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/et_username"
+        android:hint="Masukkan Nama Akun"
+        android:inputType="text"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/robotlanang"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/et_email" />
+
+    <EditText
+        android:id="@+id/et_kelas"
+        android:layout_width="470dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/kotakisi"
+        android:hint="Masukkan Kelas"
+        android:inputType="text"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/robotlanang"
+        app:layout_constraintTop_toBottomOf="@id/et_namaakun" />
 
     <!-- Login Button -->
 
@@ -99,20 +115,20 @@
         android:layout_width="133dp"
         android:layout_height="43dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:scaleType="fitXY"
-        android:src="@drawable/btnlogin"
+        android:src="@drawable/btnselanjutnya"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.405"
+        app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toEndOf="@id/robotlanang"
-        app:layout_constraintTop_toBottomOf="@id/et_password" />
+        app:layout_constraintTop_toBottomOf="@id/et_kelas" />
 
     <TextView
         android:id="@+id/tv_register_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Belum punya akun?"
+        android:text="Sudah punya akun?"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="Yuk daftar dulu"
+        android:text="Yuk masuk dulu"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="14sp"
         android:textStyle="bold"
