--- a/app/src/main/res/anim/loop_up_down.xml
+++ b/app/src/main/res/anim/loop_up_down.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-
-</set>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="700"
+    android:fromYDelta="0%"
+    android:toYDelta="-10%"
+    android:repeatCount="infinite"
+    android:repeatMode="reverse"
+    android:interpolator="@android:interpolator/decelerate_cubic" />
