--- a/app/src/main/res/anim/move_up.xml
+++ b/app/src/main/res/anim/move_up.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-
-</set>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="1000"
+    android:fromYDelta="0%"
+    android:toYDelta="-30%"
+    android:interpolator="@android:interpolator/decelerate_cubic" />
