--- a/app/src/main/res/drawable/border_default.xml
+++ b/app/src/main/res/drawable/border_default.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@android:color/transparent" />
+    <stroke android:width="2dp" android:color="@android:color/darker_gray" />
+    <corners android:radius="8dp" />
+</shape>
