--- a/app/src/main/res/layout/activity_game_dadu.xml
+++ b/app/src/main/res/layout/activity_game_dadu.xml
@@ -34,6 +34,19 @@
         app:layout_constraintVertical_bias="0.096" />
 
     <ImageView
+        android:id="@+id/submit"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/btnsubmit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/splashBackground"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.914" />
+
+    <ImageView
         android:id="@+id/profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
